<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XLViewer</string>
    <string name="app_title">测试版</string>
    <string name="login_label_server">服务器</string>
    <string name="login_label_username">账号</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_label_password">密码</string>
    <string name="login_force_sign_in">强制登陆</string>
    <string name="login_label_sign_in">登陆</string>
    <string name="login_label_signing">登陆中...</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="grab">抓图</string>
    <string name="gl_no_support_title">错误</string>
    <string name="gl_no_support_message">不支持GLES2.0</string>
    <string name="exit">退出</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="back">返回</string>
    <string name="all">全部</string>
    <string name="online">在线</string>
    <string name="menu">菜单</string>
    <string name="real_video">视频播放</string>
    <string name="prev_pic">上一张</string>
    <string name="next_pic">下一张</string>
    <string name="prev_video">上一个</string>
    <string name="next_video">下一个</string>
    <string name="mark">标记</string>
    <string name="mark_list">标记列表</string>
    <string name="send_content">消息发送</string>
    <string name="send_file">文件发送</string>
    <string name="manage_image">图片管理</string>

    <string name="login_error">登陆失败</string>
    <string name="login_re_user_pwd_error">账号或者密码错误</string>
    <string name="login_re_login_error">账号在已经其他主机登陆</string>
    <string name="login_network_error">网络连接失败</string>
    <string name="login_timeout">登陆超时</string>

</resources>
