<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:padding="15dip"
        android:layout_margin="15dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_title" />

        <ImageView android:id="@+id/xl_mobile_logo"
            android:src="@drawable/xl_mobile_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:padding="15dip"
        android:layout_margin="15dip"
        android:background="@drawable/login_bg_div">

        <TextView
            android:id="@+id/login_server_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/login_label_server"
            style="@style/normalText"/>
        <EditText
            android:id="@+id/server_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_server_input"
            android:singleLine="true"
            android:text="222.214.218.237"
            android:inputType="text"/>
        <TextView
            android:id="@+id/login_user_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/server_edit"
            android:text="@string/login_label_username"
            style="@style/normalText"/>
        <EditText
            android:id="@+id/username_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:singleLine="true"
            android:text="test1"
            android:inputType="text"/>
        <TextView
            android:id="@+id/login_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit"
            android:text="@string/login_label_password"
            style="@style/normalText"/>
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:password="true"
            android:singleLine="true"
            android:text="test1"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit"
            android:layout_alignRight="@id/password_edit"
            android:text="@string/login_label_sign_in"
            android:background="@drawable/login_btn_bg"/>
        <!--android:background="@drawable/blue_button"-->

    </RelativeLayout>

</LinearLayout>

